# TX2_qt_ros_ws

./: README.md  Untitled Document  git respo  natapp.readme  navigation_node.cpp  navigation_node_2.cpp  simple_navigation_goals_1.cpp
bak/: button_function.readme  slammap  ui.readme
devel/: .catkin  .rosinstall  setup.sh
devel/include/record/: lonlat.h
devel/include/simple_voice/: TTS_message.h
devel/lib/gps/: gps_response
devel/lib/guitest/: guitest
devel/lib/pkgconfig/: gps.pc  guitest.pc  record.pc  simple_voice.pc
devel/lib/record/: gps  record_data  sendgps
devel/share/gps/cmake/: gpsConfig.cmake
devel/share/guitest/cmake/: guitestConfig.cmake
devel/share/record/cmake/: record-msg-extras.cmake  record-msg-paths.cmake  recordConfig.cmake
devel/share/roseus/ros/record/: manifest.l
devel/share/simple_voice/cmake/: simple_voice-msg-paths.cmake  simple_voiceConfig.cmake
map/: mymap.html
src/: direction.xml
src/gps/: CMakeLists.txt  package.xml
src/gps/include/gps/: gps.h
src/gps/src/: gps.cpp  gps11.cpp
src/guitest/: CMakeLists.txt
src/guitest/include/guitest/: imagesave_node.hpp  main_window.hpp  qnode.hpp  socketsend_node.hpp
src/guitest/src/: imagesave_node.cpp  main.cpp  main_window.cpp  main_window.cpp.autosave  qnode.cpp  socketsend_node.cpp
src/guitest/ui/: main_window.ui
src/navigation/src/: multinav.py  soft_multinav.py
src/record/: CMakeLists.txt  mymap.html  mymap1.html  package.xml
src/record/msg/: lonlat.msg
src/record/src/: fprintf.txt  gps.cpp  gps1.cpp  record_data.cpp  sendgps.cpp
(+10 files in other folders)
